@@ -1,32 +1,0 @@
-# $NetBSD: Makefile.common,v 1.3 2014/10/05 16:41:09 wiz Exp $
-#
-# used by www/opera-acroread7/Makefile
-
-PKGNAME=		${DISTNAME:C|MozillaFirebird|firefox|}
-CATEGORIES=		www print
-MASTER_SITES=		# empty
-DISTFILES=		# empty
-
-DEPENDS+=		opera>=11.61:../../www/opera
-
-EMUL_PLATFORMS=		linux-i386
-EMUL_MODULES.linux=	motif
-EMUL_REQD=		suse>=7.3
-
-ACRO_PLATFORM=		intellinux
-
-WRKSRC=			${WRKDIR}
-NO_CONFIGURE=		YES
-BUILD_DIRS=		# empty
-PLIST_SRC=		# empty
-
-FILES_SUBST+=		ACROREAD=${ACROREAD:Q}
-FILES_SUBST+=		ACRO_SUBDIR=${ACRO_SUBDIR:Q}
-FILES_SUBST+=		ACRO_PLATFORM=${ACRO_PLATFORM:Q}
-
-DEINSTALL_TEMPLATES+=	${PKGSRCDIR}/www/opera-acroread7/DEINSTALL
-INSTALL_TEMPLATES+=	${PKGSRCDIR}/www/opera-acroread7/INSTALL
-
-INSTALLATION_DIRS+=	${PREFIX}/lib/opera/plugins
-
-do-install:	# nothing
